--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 </head>
 <body>
 
-<header class="masthead">
+<header class="header">
 <h1>Beetles</h1>
 </header>
+
+<nav>
+  <ul>
+    <li><a href="">Ant Nest</a></li>
+    <li><a href="">Stag</a></li>
+    <li><a href="">Dung</a></li>
+    <li><a href="">Tortoise</a></li>
+  </ul>
+</nav>
 
 </body>
 </html>
