--- a/index.html
+++ b/index.html
@@ -23,5 +23,10 @@
   </ul>
 </nav>
 
+<div class="ground">
+  <h2>Beetles: 25% of all known animal life-forms.</h2>
+  <img class="g-image" src="images/ground.jpg" alt="Ground">
+</div>
+
 </body>
 </html>
