--- a/index.html
+++ b/index.html
@@ -28,5 +28,25 @@
   <img class="g-image" src="images/ground.jpg" alt="Ground">
 </div>
 
+<div class=top>
+  <img class="beetle-ant" src="images/beetle2.jpg" alt="Beetle">
+  <a class="button-ant" href=""> Ant Nest </a>
+
+  <img class="beetle-stag" src="images/beetle1.jpg" alt="Beetle">
+  <a class="button-stag" href=""> Stag </a>
+</div>
+
+<div class=bottom>
+  <img class="beetle-tort" src="images/beetle3.jpg" alt="Beetle">
+  <a class="button-tort"  href=""> Tortoise</a>
+
+  <img class="beetle-dung"src="images/beetle4.jpg" alt="Beetle">
+  <a class="button-dung" href=""> Dung </a>
+</div>
+
+
+<footer>
+</footer>
+
 </body>
 </html>
